fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,7 +52,7 @@ html {
 body {
   /* Margin bottom by footer height */
     margin-bottom: 60px;
-    padding-top: 5rem;
+    /*padding-top: 5rem;*/
 }
 
 .footer {
